--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,24 @@
   "bugs": {
     "url": "https://github.com/krealal/primeNumberEncryption/issues"
   },
-  "homepage": "https://github.com/krealal/primeNumberEncryption#readme"
+  "homepage": "https://github.com/krealal/primeNumberEncryption#readme",
+  "dependencies": {
+    "crypto": "^1.0.1",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.3"
+  },
+  "jest": {
+    "globals": {},
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
+  }
 }
